--- a/src/component/homepage/card.css
+++ b/src/component/homepage/card.css
@@ -5,23 +5,22 @@
     border: 1px solid grey;
     border-radius: 5px;
     padding: 0px;
-    margin-top: 70px;
+    
     cursor: pointer;
     -moz-osx-font-smoothing: grayscale;
     backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
+    min-width: 150px;
     
+   
   }
+  
   .card-text-header{
-    font-size: 50;
-    font-family: 'Staatliches';
+    font-size: 16px;
+    font-family: "Muli", "sans-serif ";
     color: white;
-    text-align: left;
+    text-align: center;
   }
-  .card-container:hover {
-    transform: scale(1.05);
-  }
+  
   .submited {
     cursor: pointer;
     
@@ -36,31 +35,47 @@
     margin-left: 35%;
     margin-top: 1%;
     margin-bottom: 1%;
-    font-size: 13px;
+    font-size: 10px;
     
     align-items: center;
-    
+    transform: translateZ(0);
+    transition: transform 0.25s ease-out;
+    }
+    .submited:hover {
+      transform: scale(1.05);
     }
     
   .card-list {
-    width: 100vw;
+    width: 90vw;
+    
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
-    
+    grid-template-columns:
+    repeat(auto-fill, minmax(250px, 1fr))
+    ;
+    grid-column-gap: 40px;
+    grid-row-gap: 20px;
+    align-content: auto;
+    flex-shrink: unset;
+
     }
     .card-header{
       background-color: royalblue;
     }
     .card-text{
-      font-size: 25;
-      font-family: 'Staatliches';
+      font-size: 14px;
+      font-family: "Muli", "sans-serif"      ;
       color: black;
       text-align: left;
     }
     .card-foot{
-      border-top: solid royalblue;
+      border-top: 1px solid royalblue;
       margin-left: 5px;
       margin-right: 5px;
+    }
+
+    
+    .header{
+      margin-top: 70px;
+      margin-bottom: 10px;
     }
