--- a/src/component/login/login.css
+++ b/src/component/login/login.css
@@ -19,6 +19,7 @@ color: #8C55AA;
 font-family: 'Ubuntu', sans-serif;
 font-weight: bold;
 font-size: 23px;
+text-align: center;
 }
 
 .un {
@@ -99,4 +100,6 @@ text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
 color: #E1BEE7;
 text-decoration: none
 }
-
+.err{
+    text-align: center;
+}
