--- a/src/component/detail/survey/rating.scss
+++ b/src/component/detail/survey/rating.scss
@@ -44,3 +44,12 @@
       padding-top:20px;
       
     }
+    .imgtext{
+      color: red;
+      text-align: right;
+    
+    }
+    .req{
+      color: red;
+    }
+    
