--- a/src/component/detail/survey/upload.scss
+++ b/src/component/detail/survey/upload.scss
@@ -1,9 +1,23 @@
 .up-but{
-    background-color: rgb(158, 152, 152);
+    background-color: rgba(131,131,131,255);
+    
 }
 
 .imgg{
     background-color:  rgb(158, 152, 152);
     
 }
-  
+.emoj1{
+    font-size:19px;
+    color:rgba(74,74,74,255);
+    align-self: center;
+}
+.emoj{
+    font-size:19px;
+    color:rgba(245,245,247,255);
+    align-self: center;
+}
+.imgali{
+    align-items: center;
+   
+}
