--- a/src/component/detail/box/details.scss
+++ b/src/component/detail/box/details.scss
@@ -9,14 +9,19 @@
 
   &.left {
     left: 0;
-    background-color:linear-gradient(to right, #9C27B0, #E040FB);
+    background-color:rgba(253,253,255,255);
     margin-top:50px; 
   }
   &.right {
     right: 0;
-    background-color:linear-gradient(to right, #9C27B0, #E040FB);
+    background-color:rgba(247,247,247,255);
+    
+   
   }
-  
+  .rightdiv{
+    margin-bottom: 20px;
+    margin-top:50px;
+  }
   .card-containered {
     display: flex;
     flex-direction: column;
@@ -34,6 +39,7 @@
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
   }
+  
   .popup{
       text-align: center;
   }
@@ -93,14 +99,14 @@
 }
 
 .maindiv{
-  margin-top: 50px;
+  margin-top: 20px;
   
 }
 .detailmain{
   margin-top: 80px;
   margin-left: 20px;
   margin-right: 10px;
-  background-color: rgb(218, 214, 214);
+  background-color:rgba(234,234,234,255);
 }
 .detailsub{
   padding-top: 20px;
@@ -133,20 +139,24 @@
 }
   .box-true{
     
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgba(211,211,213,255);
     margin-left: 25px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding-top: 13px;
+    padding-bottom: 13px;
     margin-right: 10px;
-    font-size:16px;
+    color:rgba(99,99,99,255)
   }
   .box-false{
     margin-left: 25px;
-    padding-top: 0.001em;
-    padding-bottom: 0.001em;
-    margin-right: 25px;
-    font-size:16px;
-    background-color: grey;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    margin-right: 10px;
+    background-color:rgba(241,241,241,255);
+    color: rgba(99,99,99,255);
+    font-weight: bold;
+  }
+  .boxfont{
+    font-size: 12px;
   }
   .marg{
     margin-top: 10px;
@@ -156,6 +166,9 @@
   }
   .align{
     float: right;
+    padding-right: 10px;
+    color:rgba(76,76,77,255);
+    padding-top: 3px;
   }
   .buttrue{
     border-color: white;
@@ -164,38 +177,37 @@
     border-color: black;
   }
   .submi {
-      cursor: pointer;
-      border-radius: 0px;
-      color: white;
-      background: rgba(74,74,74,255);
-      
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-bottom: 10px;
-      padding-top: 10px;
-      font-family: 'Ubuntu', sans-serif;
-      margin-left: 65%;
-      margin-top: 1%;
-      margin-bottom: 1%;
-      font-size: 10px;
-    
-      align-items: center;
-      transform: translateZ(0);
-      transition: transform 0.25s ease-out;
+    background-color:rgba(74,74,74,255);
+    border: none;
+    color: white;
+    padding: 10px 35px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 71%;
       }
       .submi:hover {
         transform: scale(1.05);
       }
+      
       .cargo{
-        background-color:rgb(182, 179, 179);
-        font-size: 16px;
+        background-color:rgba(196,196,196,255);
+        font-size: 14px;
         padding-left: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
         font-family: "Muli", "sans-serif";
         font-weight: bold;
-        margin-left: 2%;
+        margin-left: 5%;
         margin-right: 5%;
+        margin-top: 29px;
+      }
+      .mai{
+        padding-right: 30px;
+        padding-left: 10px;
       }
   
 }
