--- a/src/component/detail/survey/form/input.scss
+++ b/src/component/detail/survey/form/input.scss
@@ -1,5 +1,13 @@
 .inpsty{
     height:45px;
-    width:250px;
-    border: 2px solid ;
+    width:260px;
+    border-left: 2px solid rgba(122,122,122,255) ;
+    border-top: 2px solid rgba(122,122,122,255) ;
+    border-right: 1px solid rgba(122,122,122,255) ;
+    border-bottom: 1px solid rgba(122,122,122,255) ;
+    background-color: rgba(248,248,248,255);
+
+    &.small{
+        height: 25px;
+    }
 }
