--- a/src/component/detail/box/details.scss
+++ b/src/component/detail/box/details.scss
@@ -156,7 +156,8 @@
     font-weight: bold;
   }
   .boxfont{
-    font-size: 12px;
+    font-size: 13px;
+    font-family: Mulli, sans-serif;
   }
   .marg{
     margin-top: 10px;
@@ -167,8 +168,12 @@
   .align{
     float: right;
     padding-right: 10px;
-    color:rgba(76,76,77,255);
+    
     padding-top: 3px;
+  }
+  .arwimg{
+   max-height: 12px;
+   padding-right: 5px;
   }
   .buttrue{
     border-color: white;
@@ -195,16 +200,17 @@
       
       .cargo{
         background-color:rgba(196,196,196,255);
-        font-size: 14px;
+        font-size: 13px;
         padding-left: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
-        font-family: "Muli", "sans-serif";
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight: bold;
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 29px;
       }
+
       .mai{
         padding-right: 30px;
         padding-left: 10px;
