--- a/src/component/detail/survey/form/form.scss
+++ b/src/component/detail/survey/form/form.scss
@@ -10,21 +10,15 @@
     
      display: inline-block;
 }
-.cargtext{
-    padding-top: 20px;
-    padding-bottom: 7px;
-    font-size: 10px;
-    color: rgba(116,116,116,255);
-}
+
 .cargmain{
 
     margin-left: 55px;
     margin-right: 45px;
 
 }
-.reqcol{
-    color: red;
-}
+
 .submitf{
     margin-top: 5%;
+    margin-left: 10%;
 }
