--- a/src/component/detail/survey/form/input.scss
+++ b/src/component/detail/survey/form/input.scss
@@ -6,8 +6,67 @@
     border-right: 1px solid rgba(122,122,122,255) ;
     border-bottom: 1px solid rgba(122,122,122,255) ;
     background-color: rgba(248,248,248,255);
-
-    &.small{
+     &.small{
         height: 25px;
+    }
+    &.smallc1{
+        width: 110px;
+        height: 25px;
+    }
+    &.smallc2{
+        width: 170px;
+        height: 25px;
+        background-color: rgba(216,216,216,255);
+    }
+    &.smallc3{
+        width: 130px;
+        height:25px;
+        background-color: rgba(216,216,216,255);
+    }
+    &.smallc4{
+        width: 250px;
+        height:40px;
+    }
+    &.smallc5{
+        width: 100px;
+        height: 20px;
+    }
+    &.smallc6{
+        height: 20px;
+        width: 260px;
+    }
+    &.smallc7{
+        height: 35px;
+    }
+}
+.reqcol{
+    color: red;
+}
+.cargtext{
+    padding-top: 20px;
+    padding-bottom: 7px;
+    font-size: 10px;
+    color: rgba(116,116,116,255);
+
+    &.smallc1{
+        padding-top: 0px;
+    }
+    &.smallc2{
+        padding-top: 0px;
+    }
+    &.smallc3{
+        padding-top: 0px;
+    }
+    &.smallc4{
+        padding-top: 0px;
+    }
+    &.smallc5{
+        padding-top: 0px;
+    }
+    &.smallc6{
+        padding-top: 0px;
+    }
+    &.smallc7{
+        padding-top: 0px;
     }
 }
